--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
-    "firebase": "7.9.0",
+    "firebase": "8.2.1",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "react": "16.13.1",
