--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
       "no-param-reassign": 0,                  
       "lines-between-class-members": 0,
       "class-methods-use-this": 0,
-      "no-nested-ternary": "off"
+      "no-nested-ternary": "off",
+      "react/jsx-props-no-spreading": 0
     }
 }
