--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
+    "dayjs": "^1.10.4",
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "8.2.1",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
