Aplicado redesign. Ajuste na area nao logoda, inputs, chat e criacao do FAQ

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
       "no-nested-ternary": "off",
       "react/jsx-props-no-spreading": 0,
       "react/destructuring-assignment": "off",
-      "import/no-extraneous-dependencies": "off"
+      "import/no-extraneous-dependencies": "off",
+      "react/no-array-index-key": "off"
     }
 }
