--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.10.4",
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "8.2.1",
     "mobx": "^6.0.4",
@@ -34,7 +35,8 @@
     "react-native-screens": "~2.15.0",
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "sharingan-rn-modal-dropdown": "git+https://github.com/filipedf1997/sharingan-rn-modal-dropdown"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
