--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@mdi/js": "^5.9.55",
-    "@mdi/react": "^1.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
@@ -23,20 +21,20 @@
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "moment": "^2.29.1",
-    "multiselect-react-dropdown": "^1.6.11",
+    "numeral": "^2.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-dropdown-picker": "^4.0.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^4.7.0",
     "react-native-reanimated": "~1.13.0",
+    "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-size-matters": "^0.4.0",
     "react-native-svg": "12.1.0",
-    "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
     "sharingan-rn-modal-dropdown": "git+https://github.com/filipedf1997/sharingan-rn-modal-dropdown"
   },
