--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
@@ -28,6 +29,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal-datetime-picker": "^9.2.0",
     "react-native-paper": "^4.7.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-responsive-fontsize": "^0.5.0",
