Finalizado fluxo de contratacao e varios ajustes

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "turistando-app",
-    "slug": "turistando-app",
+    "name": "Turistando Beberibe",
+    "slug": "turistando-beberibe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
