--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^9.2.0",
     "react-native-paper": "^4.7.0",
+    "react-native-ratings": "^7.4.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "3.1.9",
