--- a/package.json
+++ b/package.json
@@ -8,41 +8,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "dayjs": "^1.10.4",
-    "expo": "~40.0.0",
-    "expo-font": "~8.4.0",
-    "expo-image-picker": "~9.2.0",
-    "expo-status-bar": "~1.0.3",
+    "expo": "^44.0.0",
+    "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
+    "expo-status-bar": "~1.2.0",
     "firebase": "8.2.1",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^9.2.0",
     "react-native-paper": "^4.7.0",
     "react-native-ratings": "^7.4.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-responsive-fontsize": "^0.5.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "12.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1",
     "sharingan-rn-modal-dropdown": "git+https://github.com/filipedf1997/sharingan-rn-modal-dropdown"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.12.9",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
